# Video-Compression

./: .gitignore  README.md  binary_helper.py  decode.py  encode.py  encoded  file_helper.py  image_helper.py  main.py  pyproject.toml  test.py  timer.py  video_helper.py
configs/: fontlist-v330.json
