[tool.poetry]
name = "repl_python3_Video-Compression"
version = "0.1.0"
description = ""
authors = ["EdClark <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
